--- a/server/package.json
+++ b/server/package.json
@@ -6,16 +6,19 @@
   "type": "module",
   "scripts": {
     "clean": "rm -rf dist",
-    "start": "node src/main.js",
+    "start": "nodemon src/main.js",
+    "processData": "node src/dataProcessing.js",
     "test": "NODE_PATH=./src/app mocha -r esm test/**/*.test.js",
     "lint": "eslint src"
   },
   "devDependencies": {
     "eslint": "^7.0.0-alpha.3",
     "esm": "^3.2.22",
-    "mocha": "^7.1.1"
+    "mocha": "^7.1.1",
+    "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "xmldom": "^0.4.0"
   }
 }
