--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "clean": "rm -rf dist",
-    "start": "nodemon src/main.js",
+    "start": "nodemon --ignore './_temp/' src/main.js",
     "processData": "node src/dataProcessing.js",
     "test": "NODE_PATH=./src/app mocha -r esm test/**/*.test.js",
     "lint": "eslint src"
@@ -18,6 +18,7 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "xmldom": "^0.4.0"
   }
